--- a/app.html
+++ b/app.html
@@ -1,102 +1,284 @@
 <!DOCTYPE html>
 <html>
 <head>
+
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>SeaConnect Feeds</title>
+<title>SeaConnect</title>
 
 <style>
 
 body{
 margin:0;
-font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto;
-background:#0f172a;
-color:white;
+font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial;
+background:linear-gradient(180deg,#0f172a,#1e293b);
+color:#f1f5f9;
+}
+
+.page{
+display:none;
 padding:20px;
+padding-bottom:95px;
 }
 
 .card{
-background:#1e293b;
-padding:16px;
-border-radius:14px;
+background:rgba(255,255,255,0.06);
+backdrop-filter:blur(12px);
+border:1px solid rgba(255,255,255,0.08);
+padding:18px;
+border-radius:22px;
 margin-bottom:16px;
-}
-
-textarea{
-width:100%;
-padding:10px;
-border-radius:10px;
-border:none;
-margin-top:8px;
+box-shadow:0 10px 30px rgba(0,0,0,.35);
 }
 
 input{
-margin-top:8px;
+width:100%;
+padding:12px;
+border-radius:14px;
+border:1px solid rgba(255,255,255,0.15);
+margin-top:6px;
+background:rgba(255,255,255,0.05);
+color:#fff;
 }
 
 button{
-padding:8px 14px;
+padding:11px 16px;
 border:none;
-border-radius:8px;
-margin-top:8px;
+border-radius:14px;
+font-weight:700;
 cursor:pointer;
 }
 
-.feedPhoto{
-width:100%;
-border-radius:12px;
-margin-top:10px;
+.primary{
+background:linear-gradient(135deg,#3b82f6,#2563eb);
+color:#fff;
 }
 
-.comment{
+.danger{
+background:#ef4444;
+color:#fff;
+}
+
+.light{
+background:rgba(255,255,255,0.1);
+color:#fff;
+}
+
+.row{
+display:flex;
+gap:10px;
+margin-top:12px;
+}
+
+.bottomnav{
+position:fixed;
+bottom:15px;
+left:50%;
+transform:translateX(-50%);
+width:90%;
+height:65px;
+background:rgba(15,23,42,0.9);
+border-radius:22px;
+display:flex;
+justify-content:space-around;
+align-items:center;
+}
+
+.bottomnav button{
+background:none;
+border:none;
+font-size:12px;
+color:#94a3b8;
+}
+
+.bottomnav button.active{
+color:#3b82f6;
+font-weight:800;
+}
+
+.subText{
 font-size:13px;
-margin-top:4px;
-padding:4px;
-background:#334155;
-border-radius:6px;
+color:#94a3b8;
+}
+
+#profilePhoto{
+width:120px;
+height:120px;
+border-radius:50%;
+object-fit:cover;
+border:4px solid #e5e7eb;
+box-shadow:0 0 30px rgba(59,130,246,.5);
 }
 
 </style>
-</head>
 
+</head>
 <body>
 
-<h2>📰 Crew Feeds</h2>
+<!-- FEEDS -->
+<div id="feedsPage" class="page" style="display:block;">
+<h2>📰 Feeds</h2>
+<div class="card subText">Feeds will be here.</div>
+</div>
 
-<div class="card">
+<!-- FRIENDS -->
+<div id="friendsPage" class="page">
+<h2>👥 Friends</h2>
+<div class="card subText">Friends will be here.</div>
+</div>
 
-<textarea id="feedInput" placeholder="Share something with crew..."></textarea>
+<!-- MESSAGES -->
+<div id="messagesPage" class="page">
+<h2>💬 Messages</h2>
+<div class="card subText">Messages will be here.</div>
+</div>
 
-<input type="file" id="feedPhoto">
+<!-- PROFILE -->
+<div id="profilePage" class="page">
 
-<br>
+<div style="display:flex;justify-content:space-between;align-items:center;">
+<h2 style="margin:0;">👤 My Profile</h2>
+<button class="danger" onclick="logout()">Logout</button>
+</div>
 
-<button onclick="createFeed()">Post</button>
+<div class="card" style="text-align:center;">
+
+<img id="profilePhoto"
+src="https://i.ibb.co/2kRZ7Z6/avatar.png">
+
+<br><br>
+
+<input type="file" id="photoInput" accept="image/*" style="display:none">
+
+<button class="primary" onclick="photoInput.click()">
+Upload Photo
+</button>
+
+<br><br>
+
+<div style="font-size:24px;font-weight:900" id="profileName"></div>
+<div style="font-size:16px;color:#94a3b8" id="profileRank"></div>
 
 </div>
 
-<div id="feedsList"></div>
+<!-- INFO -->
+<div class="card">
+
+<div style="display:flex;justify-content:space-between">
+<div style="font-weight:900">Professional Information</div>
+<button class="light" onclick="toggleInfo()" id="infoBtn">Show</button>
+</div>
+
+<div id="infoSection" style="display:none;margin-top:12px">
+
+<div class="subText">Email</div>
+<div id="profileEmail"></div>
+
+<div class="subText">Company</div>
+<div id="profileCompany"></div>
+
+<div class="subText">Vessel</div>
+<div id="profileVessel"></div>
+
+<div class="subText">Experience</div>
+<div id="profileExperience"></div>
+
+<div class="subText">Phone</div>
+<div id="profilePhone"></div>
+
+<div class="subText">Address</div>
+<div id="profileAddress"></div>
+
+</div>
+
+</div>
+
+<!-- EDIT PROFILE -->
+<div class="card">
+
+<button class="primary" onclick="toggleEdit()">Edit Profile</button>
+
+<div id="editSection" style="display:none;margin-top:20px">
+
+<input id="nameInput" placeholder="Name">
+<input id="rankInput" placeholder="Rank">
+<input id="companyInput" placeholder="Company">
+<input id="vesselInput" placeholder="Vessel">
+<input id="experienceInput" placeholder="Experience">
+<input id="phoneInput" placeholder="Phone">
+<input id="addressInput" placeholder="Address">
+
+<div class="row">
+<button class="primary" onclick="saveProfile()">Save</button>
+<button class="light" onclick="toggleEdit()">Cancel</button>
+</div>
+
+</div>
+
+</div>
+
+<!-- DOCUMENTS -->
+<div class="card">
+
+<div style="display:flex;justify-content:space-between">
+<div style="font-weight:900">📄 My Documents</div>
+<button class="primary" onclick="toggleDocForm()">Add</button>
+</div>
+
+<div id="docFormSection" style="display:none;margin-top:20px">
+
+<input id="docTypeInput" placeholder="Document Type">
+<input id="docNumberInput" placeholder="Document Number">
+
+<input type="date" id="docIssueInput">
+<input type="date" id="docExpiryInput">
+
+<div class="row">
+<button class="primary" onclick="addDocument()">Save</button>
+<button class="light" onclick="toggleDocForm()">Cancel</button>
+</div>
+
+</div>
+
+</div>
+
+<div id="documentsList"></div>
+
+</div>
+
+<!-- NAV -->
+<div class="bottomnav">
+
+<button class="active" onclick="showPage('feedsPage',this)">📰 Feeds</button>
+<button onclick="showPage('friendsPage',this)">👥 Friends</button>
+<button onclick="showPage('messagesPage',this)">💬 Messages</button>
+<button onclick="showPage('profilePage',this)">👤 Profile</button>
+
+</div>
 
 <script type="module">
 
 import { initializeApp }
 from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
 
-import { getAuth,onAuthStateChanged }
+import {
+getAuth,
+onAuthStateChanged,
+signOut
+}
 from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
 import {
 getFirestore,
+doc,
+getDoc,
+setDoc,
 collection,
 addDoc,
 query,
-orderBy,
+where,
 onSnapshot,
-doc,
-deleteDoc,
-getDoc,
-updateDoc,
-where
+deleteDoc
 }
 from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
@@ -112,230 +294,170 @@ const auth=getAuth(app);
 const db=getFirestore(app);
 
 let currentUID=null;
-let currentName="Crew";
+let currentEmail=null;
+
+const IMGBB_KEY="5b417e8de4a883f7425eeda12dc38f06";
+
+
+window.showPage=function(id,btn){
+
+document.querySelectorAll(".page")
+.forEach(p=>p.style.display="none");
+
+document.querySelectorAll(".bottomnav button")
+.forEach(b=>b.classList.remove("active"));
+
+document.getElementById(id).style.display="block";
+
+btn.classList.add("active");
+
+};
+
+
+window.toggleInfo=function(){
+
+const sec=document.getElementById("infoSection");
+const btn=document.getElementById("infoBtn");
+
+if(sec.style.display==="none"){
+sec.style.display="block";
+btn.innerText="Hide";
+}else{
+sec.style.display="none";
+btn.innerText="Show";
+}
+
+};
 
 
 onAuthStateChanged(auth,async(user)=>{
 
 if(!user){
-alert("Login first");
+location.href="index.html";
 return;
 }
 
 currentUID=user.uid;
+currentEmail=(user.email||"").toLowerCase();
 
 const ref=doc(db,"users",currentUID);
 const snap=await getDoc(ref);
 
-if(snap.exists()){
-currentName=snap.data().name || "Crew";
-}
+if(!snap.exists()){
 
-loadFeeds();
-
-});
-
-
-/* CREATE POST */
-
-window.createFeed=async function(){
-
-const text=document.getElementById("feedInput").value.trim();
-const photo=document.getElementById("feedPhoto").files[0];
-
-if(!text && !photo){
-alert("Write something or upload photo");
-return;
-}
-
-let photoURL="";
-
-if(photo){
-
-const formData=new FormData();
-formData.append("image",photo);
-
-const res=await fetch(
-"https://api.imgbb.com/1/upload?key=5b417e8de4a883f7425eeda12dc38f06",
-{method:"POST",body:formData});
-
-const data=await res.json();
-photoURL=data.data.url;
-
-}
-
-await addDoc(collection(db,"feeds"),{
-
-uid:currentUID,
-name:currentName,
-text:text,
-photo:photoURL,
-likes:[],
+await setDoc(ref,{
+email:currentEmail,
+name:user.email.split("@")[0],
 createdAt:Date.now()
+});
+
+}
+
+loadProfile();
+loadDocuments();
 
 });
 
-document.getElementById("feedInput").value="";
-document.getElementById("feedPhoto").value="";
+
+async function loadProfile(){
+
+const snap=await getDoc(doc(db,"users",currentUID));
+const d=snap.data()||{};
+
+profileName.innerText=d.name||"";
+profileRank.innerText=d.rank||"";
+
+profileEmail.innerText=d.email||"";
+profileCompany.innerText=d.company||"-";
+profileVessel.innerText=d.vessel||"-";
+profileExperience.innerText=d.experience||"-";
+profilePhone.innerText=d.phone||"-";
+profileAddress.innerText=d.address||"-";
+
+}
+
+
+window.toggleEdit=function(){
+
+const s=document.getElementById("editSection");
+
+s.style.display=
+s.style.display==="none"?"block":"none";
 
 };
 
 
-/* LOAD FEEDS */
+window.saveProfile=async function(){
 
-function loadFeeds(){
+await setDoc(doc(db,"users",currentUID),{
+
+name:nameInput.value,
+rank:rankInput.value,
+company:companyInput.value,
+vessel:vesselInput.value,
+experience:experienceInput.value,
+phone:phoneInput.value,
+address:addressInput.value
+
+},{merge:true});
+
+loadProfile();
+toggleEdit();
+
+};
+
+
+window.toggleDocForm=function(){
+
+const f=document.getElementById("docFormSection");
+
+f.style.display=
+f.style.display==="none"?"block":"none";
+
+};
+
+
+window.addDocument=async function(){
+
+await addDoc(collection(db,"documents"),{
+
+uid:currentUID,
+type:docTypeInput.value,
+number:docNumberInput.value,
+issue:docIssueInput.value,
+expiry:docExpiryInput.value,
+createdAt:Date.now()
+
+});
+
+toggleDocForm();
+
+};
+
+
+function loadDocuments(){
 
 const q=query(
-collection(db,"feeds"),
-orderBy("createdAt","desc")
+collection(db,"documents"),
+where("uid","==",currentUID)
 );
 
 onSnapshot(q,(snap)=>{
 
-const list=document.getElementById("feedsList");
-list.innerHTML="";
+documentsList.innerHTML="";
 
-snap.forEach(docSnap=>{
+snap.forEach(d=>{
 
-const d=docSnap.data();
-const id=docSnap.id;
-
-const liked=d.likes?.includes(currentUID);
-
-list.innerHTML+=`
-
+documentsList.innerHTML+=`
 <div class="card">
 
-<b>${d.name}</b>
+<b>${d.data().type}</b><br>
+${d.data().number || ""}
 
-<div style="margin-top:6px">
-${d.text || ""}
-</div>
-
-${d.photo ? `<img src="${d.photo}" class="feedPhoto">` : ""}
-
-<div style="margin-top:10px">
-
-<button onclick="toggleLike('${id}')">
-${liked ? "💙 Liked" : "👍 Like"}
-</button>
-
-<span style="font-size:13px">
-${d.likes?.length || 0} likes
-</span>
-
-${d.uid===currentUID ? `
-<button onclick="deletePost('${id}')">
+<button onclick="deleteDocument('${d.id}')">
 Delete
 </button>
-` : ""}
 
-</div>
-
-<div style="margin-top:10px">
-
-<input id="comment-${id}" placeholder="Write comment">
-
-<button onclick="sendComment('${id}')">
-Send
-</button>
-
-</div>
-
-<div id="comments-${id}"></div>
-
-</div>
-
-`;
-
-loadComments(id);
-
-});
-
-});
-
-}
-
-
-/* LIKE SYSTEM */
-
-window.toggleLike=async function(feedId){
-
-const ref=doc(db,"feeds",feedId);
-const snap=await getDoc(ref);
-
-let likes=snap.data().likes || [];
-
-if(likes.includes(currentUID)){
-likes=likes.filter(x=>x!==currentUID);
-}else{
-likes.push(currentUID);
-}
-
-await updateDoc(ref,{likes:likes});
-
-};
-
-
-/* DELETE POST */
-
-window.deletePost=async function(id){
-
-if(confirm("Delete this post?")){
-await deleteDoc(doc(db,"feeds",id));
-}
-
-};
-
-
-/* SEND COMMENT */
-
-window.sendComment=async function(feedId){
-
-const input=document.getElementById("comment-"+feedId);
-const text=input.value.trim();
-
-if(!text)return;
-
-await addDoc(collection(db,"comments"),{
-
-feedId:feedId,
-uid:currentUID,
-name:currentName,
-text:text,
-createdAt:Date.now()
-
-});
-
-input.value="";
-
-};
-
-
-/* LOAD COMMENTS */
-
-function loadComments(feedId){
-
-const q=query(
-collection(db,"comments"),
-where("feedId","==",feedId),
-orderBy("createdAt","asc")
-);
-
-onSnapshot(q,(snap)=>{
-
-const box=document.getElementById("comments-"+feedId);
-if(!box)return;
-
-box.innerHTML="";
-
-snap.forEach(docSnap=>{
-
-const d=docSnap.data();
-
-box.innerHTML+=`
-<div class="comment">
-<b>${d.name}</b> ${d.text}
 </div>
 `;
 
@@ -344,6 +466,22 @@ box.innerHTML+=`
 });
 
 }
+
+
+window.deleteDocument=async function(id){
+
+await deleteDoc(doc(db,"documents",id));
+
+};
+
+
+window.logout=async function(){
+
+await signOut(auth);
+
+location.href="index.html";
+
+};
 
 </script>
 
