--- a/app.html
+++ b/app.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-<meta charset="UTF-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>SeaConnect</title>
 
 <style>
@@ -48,6 +48,7 @@ border:none;
 border-radius:14px;
 font-weight:700;
 cursor:pointer;
+transition:all .2s ease;
 }
 
 .primary{
@@ -71,6 +72,15 @@ gap:10px;
 margin-top:12px;
 }
 
+.row > button{
+flex:1;
+}
+
+.subText{
+font-size:13px;
+color:#94a3b8;
+}
+
 .bottomnav{
 position:fixed;
 bottom:15px;
@@ -79,26 +89,25 @@ transform:translateX(-50%);
 width:90%;
 height:65px;
 background:rgba(15,23,42,0.9);
+backdrop-filter:blur(10px);
 border-radius:22px;
 display:flex;
 justify-content:space-around;
 align-items:center;
+box-shadow:0 10px 40px rgba(0,0,0,.6);
 }
 
 .bottomnav button{
 background:none;
 border:none;
+font-size:12px;
+font-weight:600;
 color:#94a3b8;
 }
 
 .bottomnav button.active{
 color:#3b82f6;
 font-weight:800;
-}
-
-.subText{
-font-size:13px;
-color:#94a3b8;
 }
 
 #profilePhoto{
@@ -136,7 +145,7 @@ box-shadow:0 0 30px rgba(59,130,246,.5);
 <button class="danger" onclick="logout()">Logout</button>
 </div>
 
-<div class="card" style="text-align:center;">
+<div class="card" style="text-align:center">
 
 <img id="profilePhoto"
 src="https://i.ibb.co/2kRZ7Z6/avatar.png"
@@ -146,27 +155,34 @@ style="width:120px;height:120px;border-radius:50%;object-fit:cover;border:4px so
 
 <input type="file" id="photoInput" accept="image/*" style="display:none">
 
-<button class="primary" onclick="document.getElementById('photoInput').click()">
+<button class="primary"
+onclick="document.getElementById('photoInput').click()">
 Upload Photo
 </button>
 
 <br><br>
 
-<div id="profileName" style="font-size:24px;font-weight:900"></div>
-<div id="profileRank" style="color:#6b7280"></div>
+<div id="profileName"
+style="font-size:24px;font-weight:900"></div>
+
+<div id="profileRank"
+style="color:#6b7280"></div>
 
 </div>
 
-<!-- PROFESSIONAL INFORMATION -->
+<!-- PROFESSIONAL INFO -->
 
 <div class="card">
 
 <div style="display:flex;justify-content:space-between;">
-<div style="font-weight:900;">Professional Information</div>
-<button class="light" onclick="toggleInfo()" id="infoBtn">Show</button>
+<div style="font-weight:900">Professional Information</div>
+
+<button class="light" onclick="toggleInfo()" id="infoBtn">
+Show
+</button>
 </div>
 
-<div id="infoSection" style="display:none;margin-top:12px;">
+<div id="infoSection" style="display:none;margin-top:12px">
 
 <div class="subText">Email</div>
 <div id="profileEmail"></div>
@@ -193,9 +209,11 @@ Upload Photo
 
 <div class="card">
 
-<button class="primary" onclick="toggleEdit()">Edit Profile</button>
+<button class="primary" onclick="toggleEdit()">
+Edit Profile
+</button>
 
-<div id="editSection" style="display:none;margin-top:20px;">
+<div id="editSection" style="display:none;margin-top:20px">
 
 <label>Full Name</label>
 <input id="nameInput">
@@ -231,11 +249,11 @@ Upload Photo
 <div class="card">
 
 <div style="display:flex;justify-content:space-between;">
-<div style="font-weight:900;">📄 My Documents</div>
+<div style="font-weight:900">📄 My Documents</div>
 <button class="primary" onclick="toggleDocForm()">Add</button>
 </div>
 
-<div id="docFormSection" style="display:none;margin-top:20px;">
+<div id="docFormSection" style="display:none;margin-top:20px">
 
 <label>Document Type</label>
 <input id="docTypeInput">
@@ -255,6 +273,7 @@ Upload Photo
 </div>
 
 </div>
+
 </div>
 
 <div id="documentsList"></div>
@@ -272,9 +291,31 @@ Upload Photo
 
 <script type="module">
 
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-import { getAuth,onAuthStateChanged,signOut } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-import { getFirestore,doc,getDoc,setDoc,collection,addDoc,query,where,onSnapshot,deleteDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+import { initializeApp } from
+"https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+
+import {
+getAuth,
+onAuthStateChanged,
+signOut
+}
+from
+"https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+
+import {
+getFirestore,
+doc,
+getDoc,
+setDoc,
+collection,
+addDoc,
+query,
+where,
+onSnapshot,
+deleteDoc
+}
+from
+"https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
 const firebaseConfig={
 apiKey:"AIzaSyCNlodsmEHrSXxgH0gTOcx4cAXwG8qmG9w",
@@ -293,12 +334,15 @@ const IMGBB_KEY="5b417e8de4a883f7425eeda12dc38f06";
 
 window.showPage=function(id,btn){
 
-document.querySelectorAll(".page").forEach(p=>p.style.display="none");
-document.querySelectorAll(".bottomnav button").forEach(b=>b.classList.remove("active"));
+document.querySelectorAll(".page")
+.forEach(p=>p.style.display="none");
+
+document.querySelectorAll(".bottomnav button")
+.forEach(b=>b.classList.remove("active"));
 
 document.getElementById(id).style.display="block";
 
-if(btn) btn.classList.add("active");
+btn.classList.add("active");
 
 };
 
@@ -317,14 +361,20 @@ btn.innerText=show?"Hide":"Show";
 window.toggleEdit=function(){
 
 const s=document.getElementById("editSection");
-s.style.display=(s.style.display==="none"||s.style.display==="")?"block":"none";
+
+s.style.display=
+(s.style.display==="none"||s.style.display==="")?
+"block":"none";
 
 };
 
 window.toggleDocForm=function(){
 
 const s=document.getElementById("docFormSection");
-s.style.display=(s.style.display==="none"||s.style.display==="")?"block":"none";
+
+s.style.display=
+(s.style.display==="none"||s.style.display==="")?
+"block":"none";
 
 };
 
@@ -346,9 +396,12 @@ loadDocuments();
 async function loadProfile(){
 
 const snap=await getDoc(doc(db,"users",currentUID));
+
 const d=snap.data()||{};
 
-if(d.photo) profilePhoto.src=d.photo;
+if(d.photo){
+profilePhoto.src=d.photo;
+}
 
 profileName.innerText=d.name||"";
 profileRank.innerText=d.rank||"";
@@ -388,6 +441,7 @@ address:addressInput.value
 alert("Profile saved");
 
 toggleEdit();
+
 loadProfile();
 
 };
@@ -395,7 +449,8 @@ loadProfile();
 window.addDocument=async function(){
 
 const type=docTypeInput.value.trim();
-if(!type) return alert("Enter document type");
+
+if(!type)return alert("Enter document type");
 
 await addDoc(collection(db,"documents"),{
 
@@ -419,7 +474,10 @@ toggleDocForm();
 
 function loadDocuments(){
 
-const q=query(collection(db,"documents"),where("uid","==",currentUID));
+const q=query(
+collection(db,"documents"),
+where("uid","==",currentUID)
+);
 
 onSnapshot(q,(snap)=>{
 
@@ -435,11 +493,29 @@ let color="#111";
 
 if(d.expiry){
 
-const diff=Math.ceil((new Date(d.expiry)-new Date())/(1000*60*60*24));
+const diff=Math.ceil(
+(new Date(d.expiry)-new Date())
+/(1000*60*60*24)
+);
 
-if(diff<0){ status="❌ Expired"; color="#ef4444"; }
-else if(diff<=30){ status="⚠️ "+diff+" days left"; color="#f59e0b"; }
-else{ status="✅ "+diff+" days left"; color="#16a34a"; }
+if(diff<0){
+
+status="❌ Expired";
+color="#ef4444";
+
+}
+else if(diff<=30){
+
+status="⚠️ "+diff+" days left";
+color="#f59e0b";
+
+}
+else{
+
+status="✅ "+diff+" days left";
+color="#16a34a";
+
+}
 
 }
 
@@ -447,7 +523,9 @@ documentsList.innerHTML+=`
 
 <div class="card">
 
-<div style="font-weight:900">${d.type}</div>
+<div style="font-weight:900">
+${d.type}
+</div>
 
 <div class="subText">Number</div>
 ${d.number||"-"}
@@ -455,11 +533,14 @@ ${d.number||"-"}
 <div class="subText">Expiry</div>
 ${d.expiry||"-"}
 
-<span style="color:${color}">${status}</span>
+<span style="color:${color}">
+${status}
+</span>
 
 <br><br>
 
-<button class="danger" onclick="deleteDocument('${id}')">
+<button class="danger"
+onclick="deleteDocument('${id}')">
 Delete
 </button>
 
@@ -479,22 +560,14 @@ await deleteDoc(doc(db,"documents",id));
 
 };
 
-/* PHOTO UPLOAD */
-
-document.getElementById("photoInput").addEventListener("change",async function(){
+document.getElementById("photoInput")
+.addEventListener("change",async function(){
 
 const file=this.files[0];
-if(!file) return;
-
-/* INSTANT PREVIEW */
-
-const preview=URL.createObjectURL(file);
-profilePhoto.src=preview;
+if(!file)return;
 
 const formData=new FormData();
 formData.append("image",file);
-
-try{
 
 const res=await fetch(
 "https://api.imgbb.com/1/upload?key="+IMGBB_KEY,
@@ -505,552 +578,13 @@ const data=await res.json();
 
 const imageUrl=data.data.url;
 
-await setDoc(doc(db,"users",currentUID),{
-
-photo:imageUrl
-
-},{merge:true});
-
-alert("✅ Photo successfully uploaded");
-
-}catch(e){
-
-alert("❌ Upload failed");
-
-}
-
-});
-
-window.logout=async function(){
-
-await signOut(auth);
-location.href="index.html";
-
-};
-
-</script>
-
-</body>
-</html><!DOCTYPE html>
-<html>
-
-<head>
-<meta charset="UTF-8"/>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>SeaConnect</title>
-
-<style>
-
-body{
-margin:0;
-font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial;
-background:linear-gradient(180deg,#0f172a,#1e293b);
-color:#f1f5f9;
-}
-
-.page{
-display:none;
-padding:20px;
-padding-bottom:95px;
-}
-
-.card{
-background:rgba(255,255,255,0.06);
-backdrop-filter:blur(12px);
-border:1px solid rgba(255,255,255,0.08);
-padding:18px;
-border-radius:22px;
-margin-bottom:16px;
-box-shadow:0 10px 30px rgba(0,0,0,.35);
-}
-
-input{
-width:100%;
-padding:12px;
-border-radius:14px;
-border:1px solid rgba(255,255,255,0.15);
-margin-top:6px;
-box-sizing:border-box;
-background:rgba(255,255,255,0.05);
-color:#fff;
-}
-
-button{
-padding:11px 16px;
-border:none;
-border-radius:14px;
-font-weight:700;
-cursor:pointer;
-}
-
-.primary{
-background:linear-gradient(135deg,#3b82f6,#2563eb);
-color:#fff;
-}
-
-.danger{
-background:linear-gradient(135deg,#ef4444,#dc2626);
-color:#fff;
-}
-
-.light{
-background:rgba(255,255,255,0.1);
-color:#fff;
-}
-
-.row{
-display:flex;
-gap:10px;
-margin-top:12px;
-}
-
-.bottomnav{
-position:fixed;
-bottom:15px;
-left:50%;
-transform:translateX(-50%);
-width:90%;
-height:65px;
-background:rgba(15,23,42,0.9);
-border-radius:22px;
-display:flex;
-justify-content:space-around;
-align-items:center;
-}
-
-.bottomnav button{
-background:none;
-border:none;
-color:#94a3b8;
-}
-
-.bottomnav button.active{
-color:#3b82f6;
-font-weight:800;
-}
-
-.subText{
-font-size:13px;
-color:#94a3b8;
-}
-
-#profilePhoto{
-box-shadow:0 0 30px rgba(59,130,246,.5);
-}
-
-</style>
-</head>
-
-<body>
-
-<!-- FEEDS -->
-<div id="feedsPage" class="page" style="display:block;">
-<h2>📰 Feeds</h2>
-<div class="card subText">Feeds will be here.</div>
-</div>
-
-<!-- FRIENDS -->
-<div id="friendsPage" class="page">
-<h2>👥 Friends</h2>
-<div class="card subText">Friends will be here.</div>
-</div>
-
-<!-- MESSAGES -->
-<div id="messagesPage" class="page">
-<h2>💬 Messages</h2>
-<div class="card subText">Messages will be here.</div>
-</div>
-
-<!-- PROFILE -->
-<div id="profilePage" class="page">
-
-<div style="display:flex;justify-content:space-between;">
-<h2>👤 My Profile</h2>
-<button class="danger" onclick="logout()">Logout</button>
-</div>
-
-<div class="card" style="text-align:center;">
-
-<img id="profilePhoto"
-src="https://i.ibb.co/2kRZ7Z6/avatar.png"
-style="width:120px;height:120px;border-radius:50%;object-fit:cover;border:4px solid #e5e7eb;">
-
-<br><br>
-
-<input type="file" id="photoInput" accept="image/*" style="display:none">
-
-<button class="primary" onclick="document.getElementById('photoInput').click()">
-Upload Photo
-</button>
-
-<br><br>
-
-<div id="profileName" style="font-size:24px;font-weight:900"></div>
-<div id="profileRank" style="color:#6b7280"></div>
-
-</div>
-
-<!-- PROFESSIONAL INFORMATION -->
-
-<div class="card">
-
-<div style="display:flex;justify-content:space-between;">
-<div style="font-weight:900;">Professional Information</div>
-<button class="light" onclick="toggleInfo()" id="infoBtn">Show</button>
-</div>
-
-<div id="infoSection" style="display:none;margin-top:12px;">
-
-<div class="subText">Email</div>
-<div id="profileEmail"></div>
-
-<div class="subText">Company</div>
-<div id="profileCompany"></div>
-
-<div class="subText">Vessel</div>
-<div id="profileVessel"></div>
-
-<div class="subText">Experience</div>
-<div id="profileExperience"></div>
-
-<div class="subText">Phone</div>
-<div id="profilePhone"></div>
-
-<div class="subText">Address</div>
-<div id="profileAddress"></div>
-
-</div>
-</div>
-
-<!-- EDIT PROFILE -->
-
-<div class="card">
-
-<button class="primary" onclick="toggleEdit()">Edit Profile</button>
-
-<div id="editSection" style="display:none;margin-top:20px;">
-
-<label>Full Name</label>
-<input id="nameInput">
-
-<label>Rank</label>
-<input id="rankInput">
-
-<label>Company</label>
-<input id="companyInput">
-
-<label>Vessel</label>
-<input id="vesselInput">
-
-<label>Experience</label>
-<input id="experienceInput">
-
-<label>Phone</label>
-<input id="phoneInput">
-
-<label>Address</label>
-<input id="addressInput">
-
-<div class="row">
-<button class="primary" onclick="saveProfile()">Save</button>
-<button class="light" onclick="toggleEdit()">Cancel</button>
-</div>
-
-</div>
-</div>
-
-<!-- DOCUMENTS -->
-
-<div class="card">
-
-<div style="display:flex;justify-content:space-between;">
-<div style="font-weight:900;">📄 My Documents</div>
-<button class="primary" onclick="toggleDocForm()">Add</button>
-</div>
-
-<div id="docFormSection" style="display:none;margin-top:20px;">
-
-<label>Document Type</label>
-<input id="docTypeInput">
-
-<label>Document Number</label>
-<input id="docNumberInput">
-
-<label>Issue Date</label>
-<input type="date" id="docIssueInput">
-
-<label>Expiry Date</label>
-<input type="date" id="docExpiryInput">
-
-<div class="row">
-<button class="primary" onclick="addDocument()">Save</button>
-<button class="light" onclick="toggleDocForm()">Cancel</button>
-</div>
-
-</div>
-</div>
-
-<div id="documentsList"></div>
-
-</div>
-
-<!-- NAV -->
-
-<div class="bottomnav">
-<button class="active" onclick="showPage('feedsPage',this)">📰 Feeds</button>
-<button onclick="showPage('friendsPage',this)">👥 Friends</button>
-<button onclick="showPage('messagesPage',this)">💬 Messages</button>
-<button onclick="showPage('profilePage',this)">👤 Profile</button>
-</div>
-
-<script type="module">
-
-import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-import { getAuth,onAuthStateChanged,signOut } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-import { getFirestore,doc,getDoc,setDoc,collection,addDoc,query,where,onSnapshot,deleteDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
-
-const firebaseConfig={
-apiKey:"AIzaSyCNlodsmEHrSXxgH0gTOcx4cAXwG8qmG9w",
-authDomain:"seaconnect-d2baa.firebaseapp.com",
-projectId:"seaconnect-d2baa"
-};
-
-const app=initializeApp(firebaseConfig);
-const auth=getAuth(app);
-const db=getFirestore(app);
-
-let currentUID=null;
-let currentEmail=null;
-
-const IMGBB_KEY="5b417e8de4a883f7425eeda12dc38f06";
-
-window.showPage=function(id,btn){
-
-document.querySelectorAll(".page").forEach(p=>p.style.display="none");
-document.querySelectorAll(".bottomnav button").forEach(b=>b.classList.remove("active"));
-
-document.getElementById(id).style.display="block";
-
-if(btn) btn.classList.add("active");
-
-};
-
-window.toggleInfo=function(){
-
-const sec=document.getElementById("infoSection");
-const btn=document.getElementById("infoBtn");
-
-const show=sec.style.display==="none";
-
-sec.style.display=show?"block":"none";
-btn.innerText=show?"Hide":"Show";
-
-};
-
-window.toggleEdit=function(){
-
-const s=document.getElementById("editSection");
-s.style.display=(s.style.display==="none"||s.style.display==="")?"block":"none";
-
-};
-
-window.toggleDocForm=function(){
-
-const s=document.getElementById("docFormSection");
-s.style.display=(s.style.display==="none"||s.style.display==="")?"block":"none";
-
-};
-
-onAuthStateChanged(auth,async(user)=>{
-
-if(!user){
-location.href="index.html";
-return;
-}
-
-currentUID=user.uid;
-currentEmail=user.email.toLowerCase();
-
-loadProfile();
-loadDocuments();
-
-});
-
-async function loadProfile(){
-
-const snap=await getDoc(doc(db,"users",currentUID));
-const d=snap.data()||{};
-
-if(d.photo) profilePhoto.src=d.photo;
-
-profileName.innerText=d.name||"";
-profileRank.innerText=d.rank||"";
-
-profileEmail.innerText=d.email||"";
-profileCompany.innerText=d.company||"-";
-profileVessel.innerText=d.vessel||"-";
-profileExperience.innerText=d.experience||"-";
-profilePhone.innerText=d.phone||"-";
-profileAddress.innerText=d.address||"-";
-
-nameInput.value=d.name||"";
-rankInput.value=d.rank||"";
-companyInput.value=d.company||"";
-vesselInput.value=d.vessel||"";
-experienceInput.value=d.experience||"";
-phoneInput.value=d.phone||"";
-addressInput.value=d.address||"";
-
-}
-
-window.saveProfile=async function(){
-
-await setDoc(doc(db,"users",currentUID),{
-
-email:currentEmail,
-name:nameInput.value,
-rank:rankInput.value,
-company:companyInput.value,
-vessel:vesselInput.value,
-experience:experienceInput.value,
-phone:phoneInput.value,
-address:addressInput.value
-
-},{merge:true});
-
-alert("Profile saved");
-
-toggleEdit();
-loadProfile();
-
-};
-
-window.addDocument=async function(){
-
-const type=docTypeInput.value.trim();
-if(!type) return alert("Enter document type");
-
-await addDoc(collection(db,"documents"),{
-
-uid:currentUID,
-type:type,
-number:docNumberInput.value,
-issue:docIssueInput.value,
-expiry:docExpiryInput.value,
-createdAt:Date.now()
-
-});
-
-docTypeInput.value="";
-docNumberInput.value="";
-docIssueInput.value="";
-docExpiryInput.value="";
-
-toggleDocForm();
-
-};
-
-function loadDocuments(){
-
-const q=query(collection(db,"documents"),where("uid","==",currentUID));
-
-onSnapshot(q,(snap)=>{
-
-documentsList.innerHTML="";
-
-snap.forEach(docSnap=>{
-
-const d=docSnap.data();
-const id=docSnap.id;
-
-let status="";
-let color="#111";
-
-if(d.expiry){
-
-const diff=Math.ceil((new Date(d.expiry)-new Date())/(1000*60*60*24));
-
-if(diff<0){ status="❌ Expired"; color="#ef4444"; }
-else if(diff<=30){ status="⚠️ "+diff+" days left"; color="#f59e0b"; }
-else{ status="✅ "+diff+" days left"; color="#16a34a"; }
-
-}
-
-documentsList.innerHTML+=`
-
-<div class="card">
-
-<div style="font-weight:900">${d.type}</div>
-
-<div class="subText">Number</div>
-${d.number||"-"}
-
-<div class="subText">Expiry</div>
-${d.expiry||"-"}
-
-<span style="color:${color}">${status}</span>
-
-<br><br>
-
-<button class="danger" onclick="deleteDocument('${id}')">
-Delete
-</button>
-
-</div>
-
-`;
-
-});
-
-});
-
-}
-
-window.deleteDocument=async function(id){
-
-await deleteDoc(doc(db,"documents",id));
-
-};
-
-/* PHOTO UPLOAD */
-
-document.getElementById("photoInput").addEventListener("change",async function(){
-
-const file=this.files[0];
-if(!file) return;
-
-/* INSTANT PREVIEW */
-
-const preview=URL.createObjectURL(file);
-profilePhoto.src=preview;
-
-const formData=new FormData();
-formData.append("image",file);
-
-try{
-
-const res=await fetch(
-"https://api.imgbb.com/1/upload?key="+IMGBB_KEY,
-{method:"POST",body:formData}
-);
-
-const data=await res.json();
-
-const imageUrl=data.data.url;
+profilePhoto.src=imageUrl;
 
 await setDoc(doc(db,"users",currentUID),{
 
 photo:imageUrl
 
 },{merge:true});
-
-alert("✅ Photo successfully uploaded");
-
-}catch(e){
-
-alert("❌ Upload failed");
-
-}
 
 });
 
