--- a/app.html
+++ b/app.html
@@ -564,10 +564,24 @@ document.getElementById("photoInput")
 .addEventListener("change",async function(){
 
 const file=this.files[0];
-if(!file)return;
+if(!file) return;
+
+/* show photo instantly */
+
+const reader=new FileReader();
+
+reader.onload=function(e){
+profilePhoto.src=e.target.result;
+};
+
+reader.readAsDataURL(file);
+
+/* upload to imgbb */
 
 const formData=new FormData();
 formData.append("image",file);
+
+try{
 
 const res=await fetch(
 "https://api.imgbb.com/1/upload?key="+IMGBB_KEY,
@@ -578,13 +592,19 @@ const data=await res.json();
 
 const imageUrl=data.data.url;
 
-profilePhoto.src=imageUrl;
+/* save real url to firebase */
 
 await setDoc(doc(db,"users",currentUID),{
-
 photo:imageUrl
-
 },{merge:true});
+
+alert("Photo uploaded successfully");
+
+}catch(e){
+
+alert("Upload failed");
+
+}
 
 });
 
